# Projektmanager

./: .gitignore  PROJECT_INFO_FOR_CODEX.md  README.md  TASK_HISTORY.md  app.db  collab_accounts.json  copilot-instructions.md  create_test_account_florian.py  pr.exe.sha256  pr.py  pr.spec  pyproject.toml  requirements.txt  start-windows-test.bat
.github/workflows/: build-windows-exe.yml
certs/: 0_0_0_0_8765.crt  0_0_0_0_8765.key
deploy/caddy/: Caddyfile.example
deploy/systemd/: pmtool.service
pmtool/: __init__.py  __main__.py  cli.py  client_config.py  collab_accounts.py  collab_server.py  config.py  gui.py  p.md  paths.py  remote_core.py  sync.py
pmtool/core/: __init__.py  legacy.py  models.py  reports.py  service.py
pmtool/reports/: __init__.py  weekly.py
pmtool/ui/: __init__.py  common.py  dialogs.py
pmtool/ui/tabs/: __init__.py  backup.py  board.py  dashboard.py  projects.py  reports.py  tasks.py  templates.py  timeline.py
scripts/: build_exe.py  restart_server.sh
tests/: test_collab_auth.py  test_configuration.py  test_core.py
